# src/routes.ts
@@ -8,6 +8,7 @@ import { usuariosRouter } from "./modules/usuarios/usuarios.routes.js";
 import { resultadosRouter } from "./modules/resultados/resultados.routes.js";
 import { apuestasRouter } from "./modules/apuestas/apuestas.routes.js";
 import { calculosRouter } from "./modules/calculos/calculos.routes.js";
+import { pagosRouter } from "./modules/pagos/pagos.routes.js";
 
 
 export const router = Router();
@@ -21,3 +22,4 @@ router.use("/usuarios", usuariosRouter);
 router.use("/jornadas", resultadosRouter);
 router.use("/jornadas", apuestasRouter);
 router.use("/calculos", calculosRouter);
+router.use("/pagos", pagosRouter);
